--- a/src/components/Header/Header.module.less
+++ b/src/components/Header/Header.module.less
@@ -1,7 +1,6 @@
 .header {
-  background: #00796b;
   color: #fff;
-  padding: 24px 0;
+  padding: 0 24px;
   text-align: center;
   font-size: 2rem;
   border-radius: 0 0 16px 16px;
