--- a/src/components/LandingPage/LandingPage.module.less
+++ b/src/components/LandingPage/LandingPage.module.less
@@ -7,6 +7,16 @@
   font-family: 'Inter', Arial, sans-serif;
 }
 
+.background-3d {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0; // ниже всех элементов
+  pointer-events: none; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
+}
+
 .navbar {
   width: 100%;
   max-width: 1200px;
