должны проигрываться анимации

--- a/src/components/LandingPage/LandingPage.module.less
+++ b/src/components/LandingPage/LandingPage.module.less
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 0; // ниже всех элементов
-  pointer-events: none; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
+  pointer-events: auto; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
 }
 
 .pediatric-landing {
