--- a/src/components/LandingPage/LandingPage.module.less
+++ b/src/components/LandingPage/LandingPage.module.less
@@ -2,8 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 800px;
+  height: 400px;
   z-index: 0; // ниже всех элементов
   pointer-events: auto; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
 }
