--- a/src/components/MainPage/MainPage.module.less
+++ b/src/components/MainPage/MainPage.module.less
@@ -85,12 +85,14 @@ body {
 .pediatric-card1 {
   grid-row: 2 / 2;
   grid-column: 1 / 2;
+  width: 303px;
 }
 
 .pediatric-card2 {
   grid-row: 2 / 2;
   grid-column: 1 / 2;
-  margin-left: 350px;
+  margin-left: 338px;
+  width: 303px;
 }
 
 .pediatric-card img {
