--- a/src/components/MainPage/MainPage.module.less
+++ b/src/components/MainPage/MainPage.module.less
@@ -10,8 +10,8 @@ body {
   left: 0;
   width: 800px;
   height: 400px;
-  z-index: 0; // ниже всех элементов
-  pointer-events: auto; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
+  // z-index: 0; // ниже всех элементов
+  // pointer-events: pointer; // чтобы клики шли сквозь Canvas (если не нужно взаимодействие)
 }
 
 .pediatric-landing {
